--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 		</header>
 		{{ content }}
 		<footer>
-			<div class="container">
-				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
+			<div class="container"><!-- 
+				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p> -->
 				<div class="footer-columns">
 					{% for column in site.data.footer %}
 					<ul class="footer-links">
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources sur Github</a></p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="/mentions-legales/">Mentions Legales</a> &amp; <a href="#">Privacy</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources sur Github</a></p>
 			</div>
 		</footer>
 		<script>
