--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="https://github.com/IamHenri/site-mozaic/mentions-legales/">Mentions Legales</a> &amp; <a href="#">Privacy</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources sur Github</a></p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="https://iamhenri.github.io/site-mozaic/mentions-legales/">Mentions Legales</a> &amp; <a href="#">Privacy</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources sur Github</a></p>
 			</div>
 		</footer>
 		<script>
