--- a/_includes/pages/blog.html
+++ b/_includes/pages/blog.html
@@ -1,12 +1,9 @@
----
-title: Blog
-description: Consultez les actualités de Mozaic.link.
----
+{% assign posts = site.posts | where:"lang", page.lang %}
 
 <div class="text-container">
 	<p class="editor-link"><a href="cloudcannon:collections/_posts" class="btn"><strong>&#9998;</strong> Add Post</a></p>
 	<ul class="blog-posts">
-		{% include list-posts.html posts=paginator.posts %}
+		{% include list-posts.html posts=posts %}
 	</ul>
 
 	{% if paginator.total_pages > 1 %}
