--- a/_includes/pages/pricing.html
+++ b/_includes/pages/pricing.html
@@ -17,7 +17,7 @@
 </div>
 
 {% if include.page.faq %}
-	<h2>Pricing FAQ</h2>
+	<h2>{{include.page.faqTitle}}</h2>
 	<dl class="faq">
 		{% for item in include.page.faq %}
 			<div>
