--- a/_layouts/localized.html
+++ b/_layouts/localized.html
@@ -55,7 +55,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="{% include relative-src.html src=t.legals_url %}">Mentions Legales</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources sur Github</a></p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mozaic.link. • <a href="{% include relative-src.html src=t.legals_url %}">Legal Notices - Mentions Legales</a> • <a href="https://github.com/IamHenri/site-mozaic">Sources on Github</a></p>
 			</div>
 		</footer>
 		<script>
